if (QT_MAJOR_VERSION EQUAL "5")
    install(DIRECTORY outline/plasma/ DESTINATION ${KDE_INSTALL_DATADIR}/kwin/outline/plasma)
    install(DIRECTORY tabbox/thumbnail_grid/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kwin/tabbox/thumbnail_grid)
    install(DIRECTORY tabbox/thumbnail_list/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kwin/tabbox/thumbnail_list)
else()
    install(DIRECTORY outline/plasma6/ DESTINATION ${KDE_INSTALL_DATADIR}/kwin/outline/plasma)
    install(DIRECTORY tabbox/thumbnail_grid_qt6/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kwin/tabbox/thumbnail_grid)
    install(DIRECTORY tabbox/thumbnail_list_qt6/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kwin/tabbox/thumbnail_list)
endif()

install(DIRECTORY onscreennotification/plasma DESTINATION ${KDE_INSTALL_DATADIR}/kwin/onscreennotification)
install(DIRECTORY frames/plasma DESTINATION ${KDE_INSTALL_DATADIR}/kwin/frames)
